chore(gateway): migrate to spring boot 3.0.5
Other required dependency updates done:
- jvm target 17
- rest assured 5.3.0
- spring cloud 2022.0.1
- docker jdk 17