@@ -9,6 +9,7 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.AllArgsConstructor;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
 import org.springframework.security.core.userdetails.MapReactiveUserDetailsService;
@@ -20,6 +21,7 @@ import org.springframework.security.web.server.SecurityWebFilterChain;
 
 @AllArgsConstructor
 @EnableWebFluxSecurity
+@Configuration
 public class SecurityConfig {
 
   private GatewayAuthConfig authConfig;
@@ -43,17 +45,18 @@ public class SecurityConfig {
                         .password(passwordEncoder().encode(username))
                         .roles(USER)
                         .build())
-            .collect(Collectors.toList()));
+            .toList());
     return new MapReactiveUserDetailsService(users);
   }
 
   @Bean
-  public SecurityWebFilterChain springSecurityFilterChain(ServerHttpSecurity http) {
+  public SecurityWebFilterChain springSecurityFilterChain(ServerHttpSecurity http)
+      throws Exception {
     configureAuthorization(http);
     return http.build();
   }
 
-  private void configureAuthorization(ServerHttpSecurity http) {
+  private void configureAuthorization(ServerHttpSecurity http) throws Exception {
     if (GatewayAuthType.OAUTH_2_LOGIN.equals(authConfig.getType())) {
       commonConfig(http).oauth2Login();
     } else {
@@ -61,29 +64,31 @@ public class SecurityConfig {
     }
   }
 
-  private ServerHttpSecurity commonConfig(ServerHttpSecurity http) {
+  private ServerHttpSecurity commonConfig(ServerHttpSecurity http) throws Exception {
     return http.csrf()
         .disable()
-        .authorizeExchange()
-        .pathMatchers("/actuator/health/**")
-        .permitAll()
-        .pathMatchers("/actuator/**")
-        .hasRole(MONITORING)
-        .pathMatchers("/favicon.ico")
-        .permitAll()
-        .pathMatchers("/habits/**")
-        .hasRole(USER)
-        .pathMatchers("/track/**")
-        .hasRole(USER)
-        .pathMatchers("/report/**")
-        .hasRole(USER)
-        .pathMatchers("/ui/overview")
-        .hasRole(USER)
-        .pathMatchers("/ui/**")
-        .permitAll()
-        .pathMatchers("/")
-        .permitAll()
-        .and();
+        .authorizeExchange(
+            (authorize) ->
+                authorize
+                    .pathMatchers("/actuator/health/**")
+                    .permitAll()
+                    .pathMatchers("/actuator/**")
+                    .hasRole(MONITORING)
+                    .pathMatchers("/favicon.ico")
+                    .permitAll()
+                    .pathMatchers("/habits/**")
+                    .hasRole(USER)
+                    .pathMatchers("/track/**")
+                    .hasRole(USER)
+                    .pathMatchers("/report/**")
+                    .hasRole(USER)
+                    .pathMatchers("/ui/overview")
+                    .hasRole(USER)
+                    .pathMatchers("/ui/**")
+                    .permitAll()
+                    .pathMatchers("/")
+                    .permitAll()
+                    .and());
   }
 
   @Bean
